# ollama-file-organizer

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: categories.py  dashboard.py  files.py  health.py  ollama.py  operations.py  watch_folders.py
backend/app/core/: config.py  database.py
backend/app/models/: entities.py
backend/app/ollama/: classification_system_prompt.txt
backend/app/schemas/: analysis.py  category.py  watch_folder.py
backend/app/services/: classifier.py  destination_resolver.py  extractor.py  file_operation.py  file_scanner.py  hashing.py  ollama_client.py  path_safety.py  rules_engine.py
backend/tests/: test_path_safety.py  test_rules_engine.py
documents/: architecture.md  security.md
frontend/: index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: client.ts
