[project]
name = "ollama-file-organizer-backend"
version = "0.1.0"
description = "Ollamaを利用した安全重視のAIファイル整理バックエンド"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.32,<1",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.6,<3",
  "sqlalchemy>=2.0,<3",
  "httpx>=0.28,<1",
  "PyMuPDF>=1.24,<2",
  "python-docx>=1.1,<2",
  "openpyxl>=3.1,<4",
]

[project.optional-dependencies]
dev = ["pytest>=8,<10", "pytest-asyncio>=0.24,<1", "ruff>=0.8,<1", "mypy>=1.13,<2"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"
